Replace the full word when completing paths.

BUG: 255867